# ccs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-25-ccs-rust-rewrite.md
docs/superpowers/specs/: 2026-06-25-ccs-rust-redesign.md
src/: agent.rs  cli.rs  env.rs  glm.rs  lib.rs  links.rs  main.rs  mcp.rs  paths.rs  permissions.rs  profile.rs  provider.rs  run.rs  shell.rs  update.rs
tests/: agents.rs  basic_commands.rs  cli.rs  launch.rs  permissions.rs  profile_commands.rs  profiles.rs  shell.rs  test_ccs.sh  update.rs
tests/lib/: assert.sh
tests/support/: mod.rs
